--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Punto 1</title>
     <h1>Informacion Personal</h1>
+    <h3>Juan Diego Gonzalez</h3>
 </head>
 <body>
     
