--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h3>Juan Diego Gonzalez</h3>
     <h4> Joven universitario de 19 años que busca emprender y pagar sus gustos caros desde pequeño</h4>
     <h1>--------------------------------------------</h1>
+    <h1>Habilidades</h1>
 </head>
 <body>
     
