--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <h4> Joven universitario de 19 años que busca emprender y pagar sus gustos caros desde pequeño</h4>
     <h1>--------------------------------------------</h1>
     <h1>Habilidades</h1>
+    <h3>Colaborador</h3>
+    <h3>Trabajo en equipo</h3>
+    <h3>Comunicador</h3>
+    <h3>Lider</h3>
+    <h3>cautivador</h3>
+    <h3>Asociativo</h3>
+    <h3>carismatico</h3>
+
 </head>
 <body>
     
