--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <h3>Asociativo</h3>
     <h3>carismatico</h3>
     <h1>--------------------------------------------</h1>
-
+    <h1>Libros Leidos</h1>
+    <h2>Cien años de soledad</h2>
+    <h3>Gabriel Garcia Marquez</h3>
+    <img src="https://1.bp.blogspot.com/-ygD82Gf2dwI/UJB82K3GO7I/AAAAAAAAAmM/MkM4UmaRdfs/s1600/cien_anos_de_soledad.jpg" alt="">
 </head>
 <body>
     
