--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     <h2>Cien años de soledad</h2>
     <h3>Gabriel Garcia Marquez</h3>
     <img src="https://1.bp.blogspot.com/-ygD82Gf2dwI/UJB82K3GO7I/AAAAAAAAAmM/MkM4UmaRdfs/s1600/cien_anos_de_soledad.jpg" alt="">
+    <h1>----------------------------------------------------</h1>
+    <h2>El Coronel No tiene quien le escriba</h2>
+    <h3>Gabriel Garcia Marquez</h3>
+    <img src="https://th.bing.com/th/id/OIP.fHdm4ZOrXjRmOadepyfuQAHaLQ?rs=1&pid=ImgDetMain" alt="">
+    <h1>----------------------------------------------------</h1>
+
+
 </head>
 <body>
     
