--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <h3>Gabriel Garcia Marquez</h3>
     <img src="https://th.bing.com/th/id/OIP.fHdm4ZOrXjRmOadepyfuQAHaLQ?rs=1&pid=ImgDetMain" alt="">
     <h1>----------------------------------------------------</h1>
+    <h2>En Busca del tiempo perdido</h2>
+    <h3>Marcel Proust</h3>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvAqUSySbyLkEbeS9pjEGB7sHl8UzGdZyRlQ&s" alt="">
 
 
 </head>
